fixed the alignment of the buttons.

--- a/css/index.css
+++ b/css/index.css
@@ -263,7 +263,7 @@ header .header-topBox .navBar nav a {
 .home .btn {
   display: block;
   background-color: #028080;
-  margin: 0 10px 20px;
+  margin: 0 2px 20px;
   cursor: pointer;
   width: 200px;
   height: 45px;
