--- a/less/mixins.less
+++ b/less/mixins.less
@@ -2,7 +2,7 @@
 .custom-btn(@bgcolor, @width, @font-color){
     display: block;
     background-color: @bgcolor;
-    margin: 0 10px 20px;
+    margin: 0 2px 20px;
     cursor: pointer;
     width: @width;
     height: 45px;
